--- a/MainPage.html
+++ b/MainPage.html
@@ -51,7 +51,7 @@
     </div>
 
     <div class="wrapper2">
-      <img src="Images/camera3.jpg">
+      <img src="Images/camera3c.jpg"> 
       <div class="text-box"> 
         <h1><a href="Lesson4.html">Lesson 4: Understanding the Exposure Triangle</a></h1>
         <p>If you’re new to photography, you can get away with taking respectable pictures right out of the box using automatic settings. However, if you want to produce quality images, you need to have a solid grasp of this basic.</p>
