--- a/ContactPage.html
+++ b/ContactPage.html
@@ -33,8 +33,7 @@
               <input type="" placeholder="Your Name" required>
               <input type="email" name="email" id="" placeholder="E-mail" required>
               <input type="" placeholder="Write a Subject" required>
-              <textarea name="" id="" cols="30" rows="10" placeholder="Your Message" required>
-              </textarea>
+              <textarea name="" id="" cols="30" rows="10" placeholder="Your Message" required></textarea>
               <input type="submit" name="" value="Submit" class="btn">
             </form>
           </div>
